@@ -6,7 +6,7 @@
     <name>ReadyAPI MQTT Plugin</name>
     <artifactId>ready-mqtt-plugin</artifactId>
     <groupId>com.smartbear</groupId>
-    <version>1.5.3</version>
+    <version>1.5.4</version>
 
     <repositories>
         <repository>
@@ -53,20 +53,26 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>11</source>
+                    <target>11</target>
+                    <compilerArgs>
+                        <arg>--add-exports</arg>
+                        <arg>
+                            java.desktop/sun.swing=ALL-UNNAMED,java.security.jgss/sun.security.jgss=ALL-UNNAMED,java.base/sun.net.spi=ALL-UNNAMED,java.desktop/sun.awt=ALL-UNNAMED,java.base/sun.security.x509=ALL-UNNAMED
+                        </arg>
+                    </compilerArgs>
                     <compilerId>groovy-eclipse-compiler</compilerId>
                 </configuration>
                 <dependencies>
                     <dependency>
                         <groupId>org.codehaus.groovy</groupId>
                         <artifactId>groovy-eclipse-compiler</artifactId>
-                        <version>3.4.0-sb-fixed</version>
+                        <version>3.5.0-sb-fixed</version>
                     </dependency>
                     <dependency>
                         <groupId>org.codehaus.groovy</groupId>
                         <artifactId>groovy-eclipse-batch</artifactId>
-                        <version>2.4.3-01</version>
+                        <version>2.4.17-02</version>
                     </dependency>
                 </dependencies>
             </plugin>
